--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "nodemailer": "^6.8.0",
-    "nodemailer-express-handlebars": "^5.0.0"
+    "nodemailer-express-handlebars": "^5.0.0",
+    "twilio": "^3.82.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
