--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
     "twilio": "^3.82.2"
